--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,7 +9,7 @@
     {
       "src": "/icon-192.PNG",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/PNG"
     },
     {
       "src": "/icon-512.png",
