--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "My Todo App",
   "short_name": "Todo",
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
@@ -9,7 +9,7 @@
     {
       "src": "/icon-192.PNG",
       "sizes": "192x192",
-      "type": "image/PNG"
+      "type": "image/png"
     },
     {
       "src": "/icon-512.png",
